ℹ️ feat: Added new booking APIs, Docker environment, and updated sample data 🛠️ fix: Corrected product and inventory validations, revamped database structure, and updated scripts 🔄 refactor: Refactored code for better maintainability and readability

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "build": "tsc",
     "prebuild": "rimraf dist/",
     "start": "node ./dist/app.js",
+    "start:docker": "npm run build && npm start",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'npm run build && npm run start'",
     "guest-token": "ts-node ./src/guest_token/guestToken.ts",
     "create-table": "ts-node ./src/DATABASE/create_database.ts",
     "sample-data": "ts-node ./src/DATABASE/sampleData.ts",
-    "truncate-table": "ts-node ./src/DATABASE/databaseAction.ts truncateProductTable"
+    "truncate-table": "ts-node ./src/DATABASE/databaseAction.ts truncateProductSampleData"
   },
   "keywords": [
     "grocery-management",
